# maestro

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  TESTING_FRAMEWORK.md  conftest.py  docker-compose.yml  justfile  mypy.ini  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
maestro/: README.md  __init__.py  app.py  config.py  entity.py  examples.py
maestro/domains/: __init__.py  binary_sensor.py  button.py  calendar.py  climate.py  cover.py  device_tracker.py  entity.py  event.py  fan.py  humidifier.py  input_boolean.py  input_datetime.py  input_number.py  input_select.py  input_text.py  light.py  lock.py  maestro.py  media_player.py  number.py  person.py  pyscript.py  select.py  sensor.py  sun.py  switch.py  update.py  weather.py  zone.py
maestro/entities/: calendar.py  climate.py  domain.py  entity.py  switch.py
maestro/handlers/: event_fired.py  hass_shutdown.py  hass_startup.py  notif_action.py  state_changed.py  types.py
maestro/infra/: __init__.py  logging.py  misc.py  registry_manager.py
maestro/integrations/: __init__.py  home_assistant.py  home_assistant_provider.py  redis.py  state_manager.py
maestro/integrations/home_assistant/: client.py  domain.py  types.py  websocket_client.py  websocket_manager.py
maestro/integrations/tests/: test_ai_state_manager.py  test_home_assistant.py  test_home_assistant_provider.py  test_redis.py  test_state_manager.py  test_state_manager_unit.py
maestro/registry/: README.md  registry_manager.py
maestro/routes/: event_fired.py  state_changed.py
maestro/testing/: __init__.py  context.py  fixtures.py  maestro_test.py  mocks.py
maestro/testing/tests/: test_action_calls.py  test_action_response.py  test_database.py  test_entity_integration.py  test_entity_state.py  test_job_scheduling.py  test_scheduler.py  test_testing_framework.py
maestro/tests/: test_cron_trigger.py  test_example_space_heater.py  test_home_assistant.py  test_state_manager.py  test_trigger_manager.py
maestro/triggers/: __init__.py  cron.py  event_fired.py  hass.py  maestro.py  notif_action.py  state_change.py  sun.py  trigger_manager.py  types.py
maestro/utils/: __init__.py  dates.py  exceptions.py  infra.py  internal.py  logger.py  logging.py  misc.py  push.py  registry_manager.py  scheduler.py
maestro/utils/testing/: QUICKSTART.md  README.md  __init__.py  assertions.py  fixtures.py  mock_hass_client.py  mock_notif.py  mock_redis.py  mock_scheduler.py  mock_state_manager.py  template_test.py  triggers.py
maestro/webhooks/: event_fired.py  hass_shutdown.py  hass_startup.py  notif_action.py  state_changed.py
scripts/: README.md  example.py  examples.py  initial_tests.py
